Cascading_Exp1 respecte le code couleurs

--- a/Highway/Cascading_Exp1.org
+++ b/Highway/Cascading_Exp1.org
@@ -63,57 +63,27 @@ import pylab as pylab
 from Plot import *
 
 D_Cascading = genfromtxt( "Cascading_Exp1.mat" )
-D_NC = D_Cascading[:,[0,1]]
-D_IC = D_Cascading[:,[0,2]]
+D_N = D_Cascading[:,[0,1]]
+D_I = D_Cascading[:,[0,2]]
 D_CN = D_Cascading[:,[0,3]]
 D_CI = D_Cascading[:,[0,4]]
-[XNC,Y_meanNC,Y_minNC,Y_maxNC] = map( array, mean_min_max( D_NC ))
-[XNC,Y_meanNC,Y_varNC] = map( array, mean_var( D_NC ))
-[XIC,Y_meanIC,Y_minIC,Y_maxIC] = map( array,mean_min_max( D_IC ))
-[XIC,Y_meanIC,Y_varIC] = map( array,mean_var( D_IC ))
-[XCN,Y_meanCN,Y_minCN,Y_maxCN] = map( array,mean_min_max( D_CN ))
-[XCN,Y_meanCN,Y_varCN] = map( array,mean_var( D_CN ))
-[XCI,Y_meanCI,Y_minCI,Y_maxCI] = map( array,mean_min_max( D_CI ))
-[XCI,Y_meanCI,Y_varCI] = map( array,mean_var( D_CI ))
 
-Expert = 7.74390968*ones(XNC.shape) #python Expert.py to get this value
-Random_mean = -1.5821833963484*ones(XNC.shape)#See Highway.org about Random.py for information on these values
-Random_min = -4.0007295890199996*ones(XNC.shape)#python Random.py to get this value
-Random_max = 2.7064859345599999*ones(XNC.shape)#python Random.py to get this value
-Random_var = 1.4465398450419833*ones(XNC.shape)#python Random.py to get this value
-x_min = min(XNC)
-x_max = max(XNC)
-y_max = 9.5 #Comme ca l'expert peut respirer
-y_min = min( Random_min[0],min(Y_minNC), min(Y_minNC), min(Y_minIC) ) - 0.2
+myPlot = Plot()
+myPlot.Expert = 7.74390968 #python Expert.py to get this value
+myPlot.Random_mean = -1.5821833963484#See Highway.org about Random.py for information on these values
+myPlot.Random_min = -4.0007295890199996#python Random.py to get this value
+myPlot.Random_max = 2.7064859345599999#python Random.py to get this value
+myPlot.Random_var = 1.4465398450419833#python Random.py to get this value
 
-#First plot, Cascading with natural features, alone
-pylab.figure(1)
-pylab.clf()
-pylab.axis([x_min,x_max,y_min,y_max])
-pylab.xlabel('Number of samples from the expert')
-pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
-pylab.grid(True)
-filled_mean_min_max( pylab, XNC, Y_meanNC, Y_minNC, Y_maxNC, 'red', 0.2,'--',"Cascading IRL",None)
-filled_mean_min_max( pylab, XNC, Y_meanNC, Y_meanNC - Y_varNC, Y_meanNC + Y_varNC, 'red', 0.4,'-.' ,None,None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_min, Random_max, 'cyan',0.2,'--',"Agent trained on a random reward",None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_mean-Random_var, Random_mean+Random_var, 'cyan',0.4,'-.',None,None)
-pylab.plot(XNC,Expert, color='blue',label="Expert",lw=2)
-pylab.savefig('Cascading_Exp1_fig1.pdf')
+myPlot.ymin = -5
+myPlot.ymax = 10
 
-#Second plot, Cascading avec les features informatives, seul
-pylab.figure(2)
-pylab.clf()
-pylab.axis([x_min,x_max,y_min,y_max])
-pylab.xlabel('Number of samples from the expert')
-pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
-pylab.grid(True)
-filled_mean_min_max( pylab, XIC, Y_meanIC, Y_minIC, Y_maxIC, 'red', 0.2,'--',"Cascading IRL",None)
-filled_mean_min_max( pylab, XIC, Y_meanIC, Y_meanIC-Y_varIC, Y_meanIC+Y_varIC, 'red', 0.4,'-.',None,None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_min, Random_max, 'cyan',0.2,'--',"Agent trained on a random reward",None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_mean-Random_var, Random_mean+Random_var, 'cyan',0.4,'-.',None,None)
-pylab.plot(XNC,Expert, color='blue',label="Expert",lw=2)
-pylab.savefig('Cascading_Exp1_fig2.pdf',transparent=True)
+myPlot.plot( D_N, 'orange', 'Cascading_Exp1_fig1.pdf' )
+myPlot.plot( D_I, 'orange', 'Cascading_Exp1_fig2.pdf' )
+myPlot.plot( D_CN, 'yellow', 'Cascading_Exp1_fig3.pdf' )
+myPlot.plot( D_CI, 'yellow', 'Cascading_Exp1_fig4.pdf' )
 
+#FIXME ranger la generation de la legende dans un endroit utile
 #The legend
 # fig = pylab.figure(4)
 # figlegend = pylab.figure(figsize=(4,2))
@@ -126,34 +96,6 @@ pylab.savefig('Cascading_Exp1_fig2.pdf',transparent=True)
 # lines += ax.plot([-1,-1],[-1,-2], color='blue',label="Expert",lw=2,linestyle='-')
 # figlegend.legend(lines,("Cascading IRL","Abbeel \& Ng IRL","Agent trained on a random reward","min, max","Standard deviation","Expert"),"center")
 # figlegend.savefig("Cascading_Exp1_legend.pdf")
-
-#Fourth plot, Classification avec les features naturelles, seul
-pylab.figure(5)
-pylab.clf()
-pylab.axis([x_min,x_max,y_min,y_max])
-pylab.xlabel('Number of samples from the expert')
-pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
-pylab.grid(True)
-filled_mean_min_max( pylab, XCN, Y_meanCN, Y_minCN, Y_maxCN, 'yellow', 0.2,'--',"Classification with natural features",None)
-filled_mean_min_max( pylab, XCN, Y_meanCN, Y_meanCN - Y_varCN, Y_meanCN + Y_varCN, 'yellow', 0.4,'-.',None,None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_min, Random_max, 'cyan',0.2,'--',"Agent trained on a random reward",None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_mean-Random_var, Random_mean+Random_var, 'cyan',0.4,'-.',None,None)
-pylab.plot(XCN,Expert, color='blue',label="Expert",lw=2)
-pylab.savefig('Cascading_Exp1_fig4.pdf',transparent=True)
-
-#Fifth plot, Classification avec les features informatives, seul
-pylab.figure(6)
-pylab.clf()
-pylab.axis([x_min,x_max,y_min,y_max])
-pylab.xlabel('Number of samples from the expert')
-pylab.ylabel('${1\over card(S)}\sum\limits_{s\in S}V(s)$')
-pylab.grid(True)
-filled_mean_min_max( pylab, XCI, Y_meanCI, Y_minCI, Y_maxCI, 'yellow', 0.2,'--',"Classification with natural features",None)
-filled_mean_min_max( pylab, XCI, Y_meanCI, Y_meanCI - Y_varCI, Y_meanCI + Y_varCI, 'yellow', 0.4,'-.',None,None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_min, Random_max, 'cyan',0.2,'--',"Agent trained on a random reward",None)
-filled_mean_min_max( pylab, XNC, Random_mean, Random_mean-Random_var, Random_mean+Random_var, 'cyan',0.4,'-.',None,None)
-pylab.plot(XCI,Expert, color='blue',label="Expert",lw=2)
-pylab.savefig('Cascading_Exp1_fig5.pdf',transparent=True)
 
 
 #+end_src
