--- a/Highway/SCIRL_Exp3.org
+++ b/Highway/SCIRL_Exp3.org
@@ -111,6 +111,46 @@ SCIRL_Exp3: SCIRL_Exp3.py ../a2str.py ../LAFEM.py DE.py ../DP.py ../DP_mu.py V_E
 #+end_src
 
 
+* Plotting
+#+begin_src python :tangle SCIRL_Exp3_plot.py
+from matplotlib import rc
+rc('text', usetex=True)
+import sys
+sys.path+=['..']
+from numpy import *
+import scipy
+import pylab as pylab
+from Plot import *
+
+D = genfromtxt( "SCIRL_Exp3.mat" )
+
+myPlot = Plot()
+myPlot.Expert = 7.74390968 #python Expert.py to get this value
+myPlot.Random_mean = -1.5821833963484#See Highway.org about Random.py for information on these values
+myPlot.Random_min = -4.0007295890199996#python Random.py to get this value
+myPlot.Random_max = 2.7064859345599999#python Random.py to get this value
+myPlot.Random_var = 1.4465398450419833#python Random.py to get this value
+
+myPlot.ymin = -5
+myPlot.ymax = 10
+
+myPlot.plot( D, 'red', 'SCIRL_Exp3_fig1.pdf' )
+
+
+#+end_src
+FIXME: Le plot concernat ANIRL devrait avoir son code dans ANIRL_Exp6.org et non ici.
+
+#+srcname: SCIRL_Exp3_make
+#+begin_src makefile
+SCIRL_Exp3_plot.py: SCIRL_Exp3.org
+	$(call tangle,"SCIRL_Exp3.org")
+
+SCIRL_Exp3_fig1.pdf: SCIRL_Exp3_plot.py SCIRL_Exp3.mat ../Plot.py
+	python SCIRL_Exp3_plot.py
+
+#+end_src
+
+
 
   #+srcname: SCIRL_Exp3_clean_make
   #+begin_src makefile
