--- a/Highway/ANIRL_Exp6.org
+++ b/Highway/ANIRL_Exp6.org
@@ -269,6 +269,45 @@ ANIRL_Exp6: ANIRL_Exp6.exe EvaluateOmega.py DE.py
 
    #+end_src
 
+* Plotting
+#+begin_src python :tangle ANIRL_Exp6_plot.py
+from matplotlib import rc
+rc('text', usetex=True)
+import sys
+sys.path+=['..']
+from numpy import *
+import scipy
+import pylab as pylab
+from Plot import *
+
+D = genfromtxt( "ANIRL_Exp6.mat" )
+
+myPlot = Plot()
+myPlot.Expert = 7.74390968 #python Expert.py to get this value
+myPlot.Random_mean = -1.5821833963484#See Highway.org about Random.py for information on these values
+myPlot.Random_min = -4.0007295890199996#python Random.py to get this value
+myPlot.Random_max = 2.7064859345599999#python Random.py to get this value
+myPlot.Random_var = 1.4465398450419833#python Random.py to get this value
+
+myPlot.ymin = -5
+myPlot.ymax = 10
+
+myPlot.plot( D, 'blue', 'ANIRL_Exp6_fig1.pdf' )
+
+
+#+end_src
+
+#+srcname: ANIRL_Exp6_make
+#+begin_src makefile
+ANIRL_Exp6_plot.py: ANIRL_Exp6.org
+	$(call tangle,"ANIRL_Exp6.org")
+
+ANIRL_Exp6_fig1.pdf: ANIRL_Exp6_plot.py ANIRL_Exp6.mat ../Plot.py
+	python ANIRL_Exp6_plot.py
+
+#+end_src
+
+
 
   #+srcname: ANIRL_Exp6_clean_make
   #+begin_src makefile
