--- a/TaskTransfer.org
+++ b/TaskTransfer.org
@@ -536,186 +536,7 @@ TT_Exp3_clean:
 ** Main code
 *** Dynamic programming
     We need a MDP solver. This quick and dirty dynamic programming implementation will do the trick :
-    #+begin_src python :tangle DP.py
-from numpy import *
-import scipy
-import pdb
-
-#FIXME: To be clean, these should be local (l_*) variables, not visible from the outside
-g_vReward = []
-g_vActions = []
-g_vV = []
-g_vPi = []
-g_fGamma = 0.9
-
-
-def V2omega( R, V, States, s_index, Pactions, sa_index ):
-    dicOmega = {} #We don't know the cardinal of the state space in advance
-    for state in States:
-        for action in range(0,len(Pactions)):
-            Pa = Pactions[ action ]
-            #Q(s,a) = R(s) + \gamma Pa(s)^TV
-            #FIXME: Gamma est code en dur ici
-            dicOmega[ sa_index( state, action ) ] = \
-            R[ s_index( state ) ] + 0.9*dot( Pa[ s_index( state ), : ], V )
-    size = max( dicOmega.keys() ) + 1
-    omega = zeros(( size, 1 ))
-    for i in range( 0, size ):
-        omega[ i ] = dicOmega[ i ]
-    return omega
-
-#FIXME: try to use numpy.armgax() somehow instead of this
-def greedy_policy( state, omega, phi, Actions ):
-    "returns \arg\max_a \omega^T\phi(s,a)"
-    s_besta = max( [[state, a] for a in Actions], key=lambda sa : dot( omega.transpose(), phi( sa[0], sa[1] )))
-    return s_besta[ 1 ]
-
-def omega2pi( omega, phi, States, s_index, Pactions ):
-    "Returns the probability matrix describing the greedy policy\
-    with respect to the Q function described by \omega^T\phi"
-    dicPi = {} #We don't know the cardinal of the state space in advance
-    for state in States:
-        action = greedy_policy( state, omega, phi, range(0, len(Pactions)))
-        Pa = Pactions[ action ]
-        dicPi[ s_index(state) ] = Pa[ s_index(state) ]
-    size = max( dicPi.keys() ) + 1
-    Pi = zeros(( size, size ))
-    for i in range(0,size):
-        Pi[ i, : ] = dicPi[ i ]
-    return Pi
-
-def Q( s, a ):
-    return g_vReward[s] + 0.9 * dot( (g_vActions[ a ])[s], g_vV.transpose() )
-
-def DP( Reward, Actions ): #FIXME devrait s'appeler Pactions ou qqc du genre
-    "Returns the probability matrix corresponding to the optimal policy with respect to the given reward and the given actions. Actions are given in the form of a probability matrix. Probability matrices are so that the $(i,j)$ element gives the probability of transitioning to state $j$ upon taking action $a$ in state $i$"
-    #pdb.set_trace()
-    global g_vReward
-    global g_vActions
-    global g_vV
-    global g_vPi
-    n = len( Reward )
-    m = len( Actions )
-    g_vReward = Reward
-    g_vActions = Actions
-    g_vPi = map( int, floor( scipy.rand( n )*m ) )
-    g_vV = scipy.rand( n )
-    #While things change,
-    changed = True
-    while changed:
-        changed = 0
-        #For each state
-        for s in range(0,n):
-            old_pi = g_vPi[ s ]
-            old_V = g_vV[ s ]
-            chosen_a = 0
-            max_Q = Q( s, chosen_a )
-            #Select the action that maximizes Q
-            for a in range(0,m):
-                fQ = Q( s, a )
-                if( fQ > max_Q ):
-                    max_Q = fQ
-                    chosen_a = a
-            g_vPi[ s ] = chosen_a
-            g_vV[ s ] = max_Q
-            if( g_vPi[ s ] != old_pi or g_vV[ s ] != old_V ):
-                changed = 1
-    #Construct the pobability matrix from the policy
-    Ppi = zeros((n,n))
-    for s in range(0,n):
-        Ppi[s] = (g_vActions[ g_vPi[s] ])[s]
-    return Ppi
-
-def DP_txt( Reward, Actions, Filename ):
-    "Same as DP, mais sauve la fonction de valeur dans un fichier."
-    #pdb.set_trace()
-    global g_vReward
-    global g_vActions
-    global g_vV
-    global g_vPi
-    n = len( Reward )
-    m = len( Actions )
-    g_vReward = Reward
-    g_vActions = Actions
-    #g_vPi = map( int, floor( scipy.rand( n )*m ) )
-    g_vPi = zeros(n)
-    #g_vV = scipy.rand( n )
-    g_vV = zeros(n)
-    #While things change,
-    changed = True
-    while changed:
-        changed = 0
-        #For each state
-        for s in range(0,n):
-            old_pi = g_vPi[ s ]
-            old_V = g_vV[ s ]
-            chosen_a = 0
-            max_Q = Q( s, chosen_a )
-            #Select the action that maximizes Q
-            for a in range(0,m):
-                fQ = Q( s, a )
-                if( fQ > max_Q ):
-                    max_Q = fQ
-                    chosen_a = a
-            g_vPi[ s ] = chosen_a
-            g_vV[ s ] = max_Q
-            if( g_vPi[ s ] != old_pi or g_vV[ s ] != old_V ):
-                changed = 1
-    #Construct the pobability matrix from the policy
-    Ppi = zeros((n,n))
-    for s in range(0,n):
-        Ppi[s] = (g_vActions[ int(g_vPi[s]) ])[s]
-    savetxt( Filename, g_vV, "%e", "\t" )
-    return Ppi
-#FIXME reecrire toutes ces fonctions de maniere plus succinte
-
-def QSA( s, a, s_index, sa_index ):
-    return g_vReward[sa_index(s,a)] + 0.9 * dot( (g_vActions[ a ])[s_index(s)], g_vV.transpose() )
-
-def DP_txt_SA( Reward, States, Actions, s_index, sa_index, Filename ):
-    "Same as DP, mais sauve la fonction de valeur dans un fichier."
-    #pdb.set_trace()
-    global g_vReward
-    global g_vActions
-    global g_vV
-    global g_vPi
-    n = len( Reward ) #cardinality of state ation space
-    m = len( Actions ) #Cardinality of action space
-    n = n/m #cardinality of state space
-    g_vReward = Reward
-    g_vActions = Actions
-    #g_vPi = map( int, floor( scipy.rand( n )*m ) )
-    g_vPi = zeros(n)
-    #g_vV = scipy.rand( n )
-    g_vV = zeros(n)
-    #While things change,
-    changed = True
-    while changed:
-        changed = 0
-        #For each state
-        for s in States:
-            old_pi = g_vPi[ s_index(s) ]
-            old_V = g_vV[ s_index(s) ]
-            chosen_a = 0
-            max_Q = QSA( s, chosen_a, s_index, sa_index )
-            #Select the action that maximizes Q
-            for a in range(0,m):
-                fQ = QSA( s, a, s_index, sa_index )
-                if( fQ > max_Q ):
-                    max_Q = fQ
-                    chosen_a = a
-            g_vPi[ s_index(s) ] = chosen_a
-            g_vV[ s_index(s) ] = max_Q
-            if( g_vPi[ s_index(s) ] != old_pi or g_vV[ s_index(s) ] != old_V ):
-                changed = 1
-    #Construct the pobability matrix from the policy
-    Ppi = zeros((n,n))
-    for s in States:
-        Ppi[s_index(s)] = (g_vActions[ int(g_vPi[s_index(s)]) ])[s_index(s)]
-    savetxt( Filename, g_vV, "%e", "\t" )
-    return Ppi
-
-    #+end_src
+    #FIXME: moved in DP.org
 *** Finding the BFS
    This code finds the coordinates of the vertices of the polytope, also known as the /basic feasible solutions/.\\
 
@@ -1247,8 +1068,6 @@ TT_Test23_clean:
   Tangling : 
   #+srcname: TT_code_make
   #+begin_src makefile
-DP.py:TaskTransfer.org
-	$(call tangle,"TaskTransfer.org")
 
 TaskTransfer.py:TaskTransfer.org
 	$(call tangle,"TaskTransfer.org")
